--- a/examples/HelloWorld-Android/build.gradle
+++ b/examples/HelloWorld-Android/build.gradle
@@ -12,6 +12,7 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        // This is the way to comment.
     }
 }
 
